test/netlist/error/duplicated-output.bop
A(a) = (b, b)
where
  b = Id(a);
end where;
